Адаптивная вёрстка, всплывающее "бургер"меню

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<title>Тренировка</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/adaptive.css">
 </head>
 <body>
 <header id="header" class="header">
@@ -37,6 +38,9 @@
 			<a href="tel:+18938392364" class="tel">
 					+1 893 839-23-64
 			</a>
+			<button class="menu-open">
+				<img src="images/menu.svg" alt="open Menu">
+			</button>
 		</div>
 		<div class="offer">
 			<p>
@@ -95,5 +99,7 @@
 		</div>
 	</div>
 </footer>
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
